--- a/web/sites/default/config/core.entity_view_display.user.user.default.yml
+++ b/web/sites/default/config/core.entity_view_display.user.user.default.yml
@@ -102,6 +102,16 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  user_assigned_to_review_entity_view_1:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
+  user_assigned_to_review_entity_view_2:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
 hidden:
   name: true
   user_picture: true
