--- a/web/sites/default/config/field.field.node.city_service.field_group.yml
+++ b/web/sites/default/config/field.field.node.city_service.field_group.yml
@@ -1,14 +1,11 @@
-uuid: 154f793d-c98e-4d0c-a95b-32f58141f137
+uuid: e6fa8702-6b10-4f77-912c-7e8ade4f8e14
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.field_group
-    - group.type.advisory_group
     - group.type.bureau_office
-    - group.type.elected_official
     - group.type.program
-    - group.type.project
     - node.type.city_service
   module:
     - custom_add_another
@@ -23,21 +20,18 @@ bundle: city_service
 label: Group
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
   handler: 'default:group'
   handler_settings:
     target_bundles:
-      advisory_group: advisory_group
       bureau_office: bureau_office
-      elected_official: elected_official
       program: program
-      project: project
     sort:
       field: label
       direction: ASC
     auto_create: false
-    auto_create_bundle: advisory_group
+    auto_create_bundle: bureau_office
 field_type: entity_reference
