--- a/web/sites/default/config/field.field.node.event.field_group.yml
+++ b/web/sites/default/config/field.field.node.event.field_group.yml
@@ -1,4 +1,4 @@
-uuid: 7528125f-3688-403f-aee1-1d0fc730f98a
+uuid: 1d6f186a-4a02-4114-9ecf-f5816a9a7ff7
 langcode: en
 status: true
 dependencies:
@@ -39,5 +39,5 @@ settings:
       field: label
       direction: ASC
     auto_create: false
-    auto_create_bundle: advisory_group
+    auto_create_bundle: bureau_office
 field_type: entity_reference
