--- a/web/themes/custom/cloudy/cloudy.libraries.yml
+++ b/web/themes/custom/cloudy/cloudy.libraries.yml
@@ -4,6 +4,7 @@ global-styling:
   css:
     component:
       css/style.bundle.css: {}
+      source/css/style.bundle.css: {}
       https://use.fontawesome.com/releases/v5.2.0/css/all.css:
         type: external
         minified: true
