--- a/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
@@ -27,14 +27,25 @@ dependencies:
 third_party_settings:
   ds:
     layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
+      id: cloudy_two_column_pattern
+      library: null
       disable_css: false
       entity_classes: all_classes
-      settings: {  }
+      settings:
+        wrappers:
+          pageContent: div
+          sideColumn: div
+          postContent: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
     regions:
-      content:
+      sideColumn:
         - field_official_title
+      pageContent:
         - field_summary
         - group_site_menu_entity_view_1
         - field_featured_content
@@ -48,7 +59,7 @@ content:
   field_bureaus:
     type: entity_reference_label
     weight: 5
-    region: content
+    region: pageContent
     label: above
     settings:
       link: true
@@ -56,7 +67,7 @@ content:
   field_featured_content:
     type: entity_reference_label
     weight: 3
-    region: content
+    region: pageContent
     label: above
     settings:
       link: true
@@ -64,7 +75,7 @@ content:
   field_featured_groups:
     type: entity_reference_label
     weight: 4
-    region: content
+    region: pageContent
     label: above
     settings:
       link: true
@@ -72,43 +83,15 @@ content:
   field_official_title:
     type: string
     weight: 0
-    region: content
-    label: visually_hidden
+    region: sideColumn
+    label: above
     settings:
       link_to_entity: false
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: p
-            fi-cl: small
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
+    third_party_settings: {  }
   field_summary:
     type: string
     weight: 1
-    region: content
+    region: pageContent
     label: hidden
     settings:
       link_to_entity: false
@@ -143,7 +126,7 @@ content:
             fi-def-at: false
   group_site_menu_entity_view_1:
     weight: 2
-    region: content
+    region: pageContent
     settings: {  }
     third_party_settings: {  }
 hidden:
