--- a/web/modules/custom/portland_migrations/migrations/policies.yml
+++ b/web/modules/custom/portland_migrations/migrations/policies.yml
@@ -23,7 +23,9 @@ process:
   field_body_content/format:
     plugin: default_value
     default_value: simplified_editor_with_media_embed
-  field_policy_number: POLICY_NUMBER
+  field_policy_number:
+    plugin: migrate_policy_number
+    source: POLICY_NUMBER
   field_legacy_path:
     plugin: str_replace
     case_insensitive: true
@@ -31,14 +33,10 @@ process:
     search: https://www.portlandoregon.gov/
     replace: '/'
   field_policy_type:
-    plugin: migration_lookup
-    migration: policies_types
-    no_stub: true
-    source: POLICY_TYPE
+    plugin: link_policy_type
+    source: POLICY_NUMBER
   field_policy_catetory:
-    plugin: migration_lookup
-    migration: policies_categories
-    no_stub: true
+    plugin: migrate_policy_categories
     source: CATEGORY_NAME
 destination:
   plugin: 'entity:node'
