--- a/web/sites/default/config/views.view.group_notifications.yml
+++ b/web/sites/default/config/views.view.group_notifications.yml
@@ -5,10 +5,8 @@ dependencies:
   config:
     - core.entity_view_mode.node.featured
     - core.entity_view_mode.node.teaser
-    - field.storage.node.field_body
   module:
     - datetime
-    - entity_reference_revisions
     - group
     - node
     - user
@@ -345,11 +343,11 @@ display:
           entity_field: gid
           plugin_id: standard
       arguments:
-        gid:
-          id: gid
-          table: group_content_field_data
-          field: gid
-          relationship: group_content
+        field_shortname_or_acronym_value:
+          id: field_shortname_or_acronym_value
+          table: group__field_shortname_or_acronym
+          field: field_shortname_or_acronym_value
+          relationship: gid
           group_type: group
           admin_label: ''
           default_action: default
@@ -359,8 +357,10 @@ display:
             title: All
           title_enable: false
           title: ''
-          default_argument_type: group_id_from_url
-          default_argument_options: {  }
+          default_argument_type: raw
+          default_argument_options:
+            index: 0
+            use_alias: true
           default_argument_skip_url: false
           summary_options:
             base_path: ''
@@ -376,11 +376,13 @@ display:
             type: none
             fail: 'not found'
           validate_options: {  }
+          glossary: false
+          limit: 0
+          case: none
+          path_case: none
+          transform_dash: false
           break_phrase: false
-          not: false
-          entity_type: group_content
-          entity_field: gid
-          plugin_id: group_id
+          plugin_id: string
       display_extenders: {  }
       use_more: false
       use_more_always: false
@@ -395,7 +397,6 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - route
         - url
         - url.query_args
         - 'user.node_grants:view'
@@ -492,7 +493,6 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - route
         - url
         - 'user.node_grants:view'
         - user.permissions
@@ -884,6 +884,4 @@ display:
         - url
         - 'user.node_grants:view'
         - user.permissions
-      tags:
-        - 'config:field.storage.node.field_body'
-        - extensions
+      tags: {  }
