--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,25 @@
         "dev": {
             "type": "vcs",
             "url": "https://github.com/acquia/lightning-dev"
+        },
+        "2": {
+            "type": "package",
+            "package": {
+                "name": "ckeditor-plugin/templates",
+                "version": "4.12.1",
+                "type": "drupal-library",
+                "dist": {
+                    "url": "https://download.ckeditor.com/templates/releases/templates_4.12.1.zip",
+                    "type": "zip"
+                }
+            }
         }
     },
     "require": {
         "acquia/lightning": "^4.0",
         "bower-asset/bootstrap-datepicker": "^1.8",
         "bower-asset/cropper": "^2.3",
+        "ckeditor-plugin/templates": "^4.12",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
