--- a/web/sites/default/config/views.view.back_reference_related_content.yml
+++ b/web/sites/default/config/views.view.back_reference_related_content.yml
@@ -2,8 +2,6 @@ uuid: e346b006-be6c-4ec7-b377-bbf9c154ffcb
 langcode: en
 status: true
 dependencies:
-  config:
-    - core.entity_view_mode.node.related
   module:
     - node
     - user
@@ -48,33 +46,25 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: full
+        type: none
         options:
-          items_per_page: 5
           offset: 0
-          id: 0
-          total_pages: null
-          expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
-          tags:
-            previous: '‹ Previous'
-            next: 'Next ›'
-            first: '« First'
-            last: 'Last »'
-          quantity: 9
       style:
-        type: default
-      row:
-        type: 'entity:node'
+        type: html_list
         options:
-          relationship: reverse__node__field_related_content
-          view_mode: related
+          grouping: {  }
+          row_class: mx-3
+          default_row_class: true
+          type: ul
+          wrapper_class: ''
+          class: 'list-unstyled d-flex flex-wrap'
+      row:
+        type: fields
+        options:
+          default_field_elements: false
+          inline: {  }
+          separator: ''
+          hide_empty: false
       fields:
         type:
           id: type
@@ -234,7 +224,7 @@ display:
           expose:
             label: ''
           granularity: second
-      title: 'Content: Back-reference related content'
+      title: 'Content that lists this content as related'
       header: {  }
       footer: {  }
       empty: {  }
@@ -293,7 +283,6 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
-        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
@@ -305,13 +294,13 @@ display:
     display_options:
       display_extenders: {  }
       block_description: 'Content: Back reference related content'
+      block_hide_empty: true
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
-        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
