--- a/web/sites/default/config/block.block.views_block__back_reference_related_content_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__back_reference_related_content_block_1.yml
@@ -11,16 +11,16 @@ dependencies:
     - cloudy
 id: views_block__back_reference_related_content_block_1
 theme: cloudy
-region: content
-weight: 5
+region: pre_content
+weight: -15
 provider: null
 plugin: 'views_block:back_reference_related_content-block_1'
 settings:
   id: 'views_block:back_reference_related_content-block_1'
-  label: 'Content that lists this as related'
+  label: ''
   provider: views
   label_display: visible
-  views_label: 'Content that lists this as related'
+  views_label: ''
   items_per_page: none
   context_mapping: {  }
 visibility:
