--- a/web/sites/default/local.services.dev.yml
+++ b/web/sites/default/local.services.dev.yml
@@ -1,7 +1,11 @@
-# Local development services.
+# Local services, development version
 #
-# To activate this feature, follow the instructions at the top of the
-# 'example.settings.local.php' file, which sits next to this file.
+# This is the development version of the local.services file, enables development settings:
+# caching off, debug on, etc. The local.services.yml file is required to run the site locally, 
+# but it is no longer managed in source control. To run the site locally in development mode, 
+# make a copy of this file and rename it # local.services.yml. To run the site locally in 
+# production mode (caching on, debug off, etc.), make a copy of local.services.default.yml and
+# rename it local.servies.yml.
 parameters:
   http.response.debug_cacheability_headers: true
   twig.config:
