--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ pantheon.upstream.yml
 # Note that services.local.yml is not loaded by default. If you would like
 # to use this file add the following to your settings.local.php file:
 #   $settings['container_yamls'][] = __DIR__ . '/services.local.yml';
-web/sites/*/services.local.yml
+web/sites/*/local.services.yml
 
 # ** Only works in OSs that support newer versions of fnmatch (Bash 4+)
 web/sites/default/**/files
