--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -4,8 +4,10 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_all_day
+    - field.storage.node.field_body_content
     - field.storage.node.field_end_date
     - field.storage.node.field_end_time
+    - field.storage.node.field_search_keywords
     - field.storage.node.field_start_date
     - field.storage.node.field_start_time
     - field.storage.node.field_summary
@@ -14,6 +16,7 @@ dependencies:
     - datetime
     - group
     - node
+    - text
     - time_field
     - user
 id: group_events
@@ -591,6 +594,131 @@ display:
           empty_zero: false
           hide_alter_empty: false
           plugin_id: custom
+        field_body_content:
+          id: field_body_content
+          table: node__field_body_content
+          field: field_body_content
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_search_keywords:
+          id: field_search_keywords
+          table: node__field_search_keywords
+          field: field_search_keywords
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       filters:
         status:
           value: '1'
@@ -644,6 +772,55 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
+        combine:
+          id: combine
+          table: views
+          field: combine
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: contains
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: combine_op
+            label: 'Search events'
+            description: ''
+            use_operator: false
+            operator: combine_op
+            identifier: combine
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+              code_editor: '0'
+              council_clerk: '0'
+              group_creator: '0'
+              park_editor: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          fields:
+            title: title
+            field_summary: field_summary
+            field_body_content: field_body_content
+            field_search_keywords: field_search_keywords
+          plugin_id: combine
         field_start_date_value:
           id: field_start_date_value
           table: node__field_start_date
@@ -658,14 +835,14 @@ display:
             value: today
             type: date
           group: 1
-          exposed: false
+          exposed: true
           expose:
             operator_id: field_start_date_value_op
-            label: 'Date range between'
+            label: 'Date between'
             description: ''
             use_operator: false
             operator: field_start_date_value_op
-            identifier: start_date
+            identifier: field_start_date_value
             required: false
             remember: false
             multiple: false
@@ -675,6 +852,9 @@ display:
               administrator: '0'
               sitewide_editor: '0'
               code_editor: '0'
+              council_clerk: '0'
+              group_creator: '0'
+              park_editor: '0'
             placeholder: ''
             min_placeholder: ''
             max_placeholder: ''
@@ -836,8 +1016,10 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_all_day'
+        - 'config:field.storage.node.field_body_content'
         - 'config:field.storage.node.field_end_date'
         - 'config:field.storage.node.field_end_time'
+        - 'config:field.storage.node.field_search_keywords'
         - 'config:field.storage.node.field_start_date'
         - 'config:field.storage.node.field_start_time'
         - 'config:field.storage.node.field_summary'
@@ -2115,6 +2297,132 @@ display:
           empty_zero: false
           hide_alter_empty: false
           plugin_id: custom
+        field_body_content:
+          id: field_body_content
+          table: node__field_body_content
+          field: field_body_content
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_search_keywords:
+          id: field_search_keywords
+          table: node__field_search_keywords
+          field: field_search_keywords
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+      exposed_block: true
     cache_metadata:
       max-age: -1
       contexts:
@@ -2127,8 +2435,10 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_all_day'
+        - 'config:field.storage.node.field_body_content'
         - 'config:field.storage.node.field_end_date'
         - 'config:field.storage.node.field_end_time'
+        - 'config:field.storage.node.field_search_keywords'
         - 'config:field.storage.node.field_start_date'
         - 'config:field.storage.node.field_start_time'
         - 'config:field.storage.node.field_summary'
